TS-2792 Large request header causes unexpected remap.